# ros2-autonomous-mobile-robot

./: .gitignore  LICENSE  README.md  frames_2026-06-24_19.38.20.gv
docs/: architecture.md  conventions.md  handoff.md  milestones.md  setup.md  sprint3-freeze.md
maps/: amr_office_map.yaml
src/amr_bringup/: CMakeLists.txt  README.md  package.xml
src/amr_bringup/launch/: display.launch.py
src/amr_control/: CMakeLists.txt  README.md  package.xml
src/amr_control/config/: ros2_control.yaml
src/amr_control/launch/: cmd_vel_keyboard.launch.py
src/amr_control/scripts/: cmd_vel_relay.py
src/amr_dashboard/: CMakeLists.txt  README.md  package.xml
src/amr_description/: CMakeLists.txt  README.md  package.xml
src/amr_description/rviz/: display.rviz
src/amr_description/urdf/: amr.urdf.xacro  amr_base.xacro  amr_caster.xacro  amr_properties.xacro  amr_ros2_control.xacro  amr_sensors.xacro  amr_wheels.xacro
src/amr_gazebo/: CMakeLists.txt  README.md  package.xml
src/amr_gazebo/launch/: gazebo.launch.py  spawn_amr.launch.py
src/amr_gazebo/urdf/: amr.gazebo.xacro  amr_base.gazebo.xacro  amr_caster.gazebo.xacro  amr_imu.gazebo.xacro  amr_lidar.gazebo.xacro  amr_wheels.gazebo.xacro
src/amr_gazebo/worlds/: empty.world  office.world
src/amr_navigation/: CMakeLists.txt  README.md  package.xml
src/amr_navigation/config/: amr_nav2_params.yaml  localization_default.rviz  navigation_default.rviz
src/amr_navigation/launch/: amr_nav2_navigation.launch.py  localization.launch.py  localization_rviz.launch.py  map_server.launch.py  navigation.launch.py  navigation_rviz.launch.py
src/amr_navigation/maps/: amr_map.yaml
src/amr_navigation/scripts/: nav_goal_relay.py
src/amr_perception/: CMakeLists.txt  README.md  package.xml
src/amr_slam/: CMakeLists.txt  README.md  package.xml
src/amr_slam/config/: slam_toolbox_default.rviz
src/amr_slam/launch/: mapping.launch.py  online_async_slam.launch.py  save_map.launch.py  slam_rviz.launch.py
