<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_dashboard</name>
  <version>0.1.0</version>
  <description>Operator dashboard and monitoring for the differential-drive AMR platform.</description>
  <maintainer email="maintainer@example.com">AMR Project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amr_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
